fix: take out linkarrow on tablet, fix forms bottom

--- a/mainsite/static/mainsite/style.css
+++ b/mainsite/static/mainsite/style.css
@@ -647,7 +647,7 @@ a.header:hover::after {
   width: 0.8vh;
   height: 25vh;
   background-color:black;
-  left: -5%;
+  left: -15%;
   top: 70vh;
   transform: rotate(-90deg) scale(0.6);
   z-index: 10;
@@ -871,11 +871,14 @@ input[type='submit'].copy-bottom:focus:hover{
   transition: 0.3s ease;
 }
 
-@media (max-width:1273px)
+@media (max-width:1270px)
 {
   .content:nth-child(2) div {
       width: 40%;
 }
+  #linkArrow{
+    display: none;
+  }
 }
 
 
@@ -921,6 +924,9 @@ input[type='submit'].copy-bottom:focus:hover{
     min-width: 100%;
     width: 100%;
     margin-bottom: 10px;
+  }
+  form .btn{
+    width: 100%;
   }
 
   .arrow{
